--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,19 +14,24 @@
 {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
+
+    {% if app.request.pathinfo == path('app_login') or app.request.pathinfo == path('app_register') %}
+    <body style="background: rgb(203,226,255); background: linear-gradient(45deg, rgba(203,226,255,1) 0%, rgba(170,215,255,1) 50%, rgba(96,164,255,1) 100%);"></body>
+    {% else %}
     <body>
-    <div class="flex items-center justify-end gap-x-2 bg-blue-500 text-white text-xl">
-        {% if app.user %}
-            <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('homepage') }}">Accueil</a>
-            {% if is_granted('ROLE_STUDENT') %}
-                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('user-profile', {'id': app.user.getInscriptionId()}) }}">{{ app.user.email }}</a>
+        <div class="flex items-center justify-end gap-x-2 bg-blue-500 text-white text-xl">
+            {% if app.user %}
+                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('homepage') }}">Accueil</a>
+                {% if is_granted('ROLE_STUDENT') %}
+                    <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('user-profile', {'id': app.user.getInscriptionId()}) }}">{{ app.user.email }}</a>
+                {% endif %}
+                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('logout') }}">Se déconnecter</a>
+            {% else %}
+                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('app_login') }}">Se connecter</a>
+                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('app_register') }}">S'inscrire</a>
             {% endif %}
-            <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('logout') }}">Se déconnecter</a>
-        {% else %}
-            <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('app_login') }}">Se connecter</a>
-            <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('app_register') }}">S'inscrire</a>
+        </div>
         {% endif %}
-    </div>
-        {% block body %}{% endblock %}
+    {% block body %}{% endblock %}
     </body>
 </html>
