--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,10 +2,14 @@
     <h1 class="text-3xl font-semibold mb-6">Bienvenue sur le site!</h1>
 
     <p class="text-lg">
-        Super ! Vous êtes maintenant inscrit. Préparez-vous pour un voyage passionnant !<br><br>
+        Super ! Vous êtes maintenant inscrit !<br><br>
     </p>
 
     <p class="text-lg">
-        Cheers !
+        N'hésiter pas à découvrir tous nos ateliers !
+    </p>
+
+    <p class="text-lg">
+        À bientôt !
     </p>
 </div>
